--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "dotenv": "^17.2.3",
     "hono": "^4.9.10"
   },
   "devDependencies": {
