--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,22 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Execute remote SSH commands using password
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker image for Linux AMD64
+        run: docker buildx build --platform linux/amd64 -t myapp:latest .
+
+      - name: Execute remote SSH commands with SSH key
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.HOST }}
@@ -16,5 +31,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           key:  ${{ secrets.SSH_KEY }}
           port: ${{ secrets.PORT }}
-          # Script to make an empty file with the current date and time as the file name
-          script: touch "$(date +'%Y-%m-%d_%H-%M-%S')"
+          script: |
+            echo "Deploying application..."
+            docker pull ${{ secrets.DOCKERHUB_IMAGE }}:latest
+            docker stop frontend || true
+            docker rm frontend || true
+            docker run -d --name frontend -p ${{ secrets.BACKEND_PORT }}:3000 ${{ secrets.DOCKERHUB_IMAGE }}:latest
